--- a/edit.html
+++ b/edit.html
@@ -3,31 +3,109 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="my.css" rel="stylesheet" type="text/css" />
     <title>Document</title>
   </head>
   <script>
-    function edityo() {
-      var check = confirm("게시물을 수정할까요?");
-      if (check == true) {
-        alert("수정되었습니다.");
+    function Checkform() {
+      if (frm.field1.value == "") {
+        frm.field1.focus();
+        alert("Please enter Movie Title.");
+
+        return false;
+      }
+      if (frm.field2.value == "") {
+        frm.field2.focus();
+        alert("Please enter Movie Genre.");
+
+        return false;
+      }
+      if (frm.field3.value == "") {
+        frm.field3.focus();
+        alert("Please enter Date.");
+
+        return false;
+      }
+      if (frm.field4.value == "") {
+        frm.field4.focus();
+        alert("Please enter Summary.");
+
+        return false;
+      } else {
+        var check = confirm("게시물을 수정할까요?");
+        if (check == true) {
+          alert("수정되었습니다.");
+          location.href = `index.html`;
+        }
       }
     }
   </script>
   <body>
-    <form action="add.html" method="post" name="frm" onsubmit="return edityo()">
-      <fieldset style="width: 600px; margin: 15px">
-        Movie Title: <input type="text" name="title" value="30일"/> 
-      </br></br>
-      Movie Genre: <input type="text" name="genre" value="로맨스 코미디"/>
-    </br></br>
-    Date: <input type="date" name="date" value="2023-10-03"/>
-  </br></br>
-  Summary: </br>
-  <textarea name="summary" cols="70" rows="5">“완벽한 저에게 신은 저 여자를 던지셨죠”</textarea>
-</br></br> 
-      </fieldset>
-      <input style="margin-left: 20px" type="submit" value="수정"/>
-    </form>
-    <script src="view.js"></script>
+    <div class="page">
+      <header>
+        <img src="./img/movieicon.png" width="50px" height="50px" />
+        <h2 onclick="location.href=`index.html`">Now showing</h2>
+        <nav>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">Contact</a></li>
+            <li><a href="">Corporation</a></li>
+          </ul>
+        </nav>
+      </header>
+    </div>
+    <div class="form-style-5">
+      <form
+        action="add.html"
+        method="post"
+        name="frm"
+        onSubmit="return Checkform()"
+      >
+        <fieldset>
+          <legend><span class="number">1</span> Candidate Info</legend>
+          <input
+            type="text"
+            name="field1"
+            placeholder="Movie Title *"
+            value="30일"
+          />
+          <input
+            type="text"
+            name="field2"
+            placeholder="Movie Genre *"
+            value="로맨스 코미디"
+          />
+          <input
+            type="date"
+            name="field3"
+            placeholder="Date *"
+            value="2023-10-03"
+          />
+          <textarea name="field4" placeholder="Summary">
+“완벽한 저에게 신은 저 여자를 던지셨죠”</textarea
+          >
+        </fieldset>
+        <fieldset>
+          <legend><span class="number">2</span> Movie Poster</legend>
+          <div class="file-upload">
+            <div class="file-upload-select">
+              <div class="file-select-button">Choose File</div>
+              <div class="file-select-name">No file chosen...</div>
+              <input
+                type="file"
+                name="file-upload-input"
+                id="file-upload-input"
+              />
+            </div>
+          </div>
+        </fieldset>
+        <input
+          type="submit"
+          value="EDIT"
+          onclick="location.href=`index.html`"
+        />
+      </form>
+    </div>
   </body>
 </html>
