--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="index.css" rel="stylesheet" type="text/css" />
+    <link href="my.css" rel="stylesheet" type="text/css" />
     <title>Document</title>
   </head>
   <body>
     <div class="page">
-      <header>
+      <header class="header">
         <img src="./img/movieicon.png" width="50px" height="50px" />
-        <h2>Now showing</h2>
+        <h2 onclick="location.href=`index.html`">Now showing</h2>
         <nav>
           <ul>
             <li><a href="#">Home</a></li>
@@ -36,7 +36,7 @@
               </tr>
             </thead>
             <tbody>
-              <tr>
+              <tr class="oneline">
                 <td id="first">1</td>
                 <td>
                   <img src="./img/30일.jpeg" width="150px" height="200px" />
@@ -46,7 +46,7 @@
                 <td>“완벽한 저에게 신은 저 여자를 던지셨죠”</td>
                 <td>2023-10-03</td>
               </tr>
-              <tr>
+              <tr class="oneline">
                 <td id="second">2</td>
                 <td>
                   <img src="./img/천박사.jpeg" width="150px" height="200px" />
@@ -58,7 +58,7 @@
                 <td>"귀신을 믿지 않는 가짜 퇴마사!"</td>
                 <td>2023-09-27</td>
               </tr>
-              <tr>
+              <tr class="oneline">
                 <td id="third">3</td>
                 <td>
                   <img
@@ -72,7 +72,7 @@
                 <td>"인간적인가, 인간의 적인가"</td>
                 <td>2023-10-03</td>
               </tr>
-              <tr>
+              <tr class="oneline">
                 <td id="fourth">4</td>
                 <td>
                   <img src="./img/화란.jpeg" width="150px" height="200px" />
